
 ** `isbusday' has been fixed to accept non-integer values.

 ** `holidays' has been changed to include past dates where the NYSE
    was closed due to exceptional reasons.

 ** `holidays' has been fixed to not count New Year's holidays when it
    falls on a Saturday (Saturday holidays should be shifted to the
    previous Friday except when it crosses a calendar year).

Summary of important user-visible changes for financial 0.4.0:
-------------------------------------------------------------------

 ** The following functions are new at financial 0.4.0:

      cfconv      cfdur      corr2cov      cov2corr

 ** The following functions have been imported from the time package
    which has been removed (it is now simply a dummy package that
    lists the financial package as its single dependency):

      busdate           busdays           datefind      datesplit
      day               daysact           easter        eomdate
      fbusdate          holidays          hour          isbusday
      lbusdate          lweekdate         m2xdate       minute
      month             months            nweekdate     second
      thirdwednesday    today             x2mdate       year
      yeardays

 ** The following functions were made private (`fetch' should be used
    directly instead):

      __fetch_google__    __fetch_yahoo__

 ** The function `datesplit' (just imported from the time package) has
    been deprecated in favour of `datevec' from Octave-core.

  ** The functions `rate' and `irr' should now be compatible with new
      releases of octave.

 ** The function `fetch' should now work properly when using google
    finnance to adapt to the UTF-8 file received.

 ** The function `dateaxis' should no longer enter in debug mode at the
    end of its call.

 ** The package is now dependent on the io package (version 1.0.18 or
    later) since the functions that it depended of from miscellaneous
    package have been moved to io.
