@@ -1,4 +1,5 @@
 ## Copyright (C) 2008 Bill Denney <bill@denney.ws>
+## Copyright (C) 2013 Carnë Draug <carandraug@octave.org>
 ##
 ## This program is free software; you can redistribute it and/or modify it under
 ## the terms of the GNU General Public License as published by the Free Software
@@ -14,18 +15,32 @@
 ## this program; if not, see <http://www.gnu.org/licenses/>.
 
 ## -*- texinfo -*-
-## @deftypefn {Function File} {mon =} month (Date)
+## @deftypefn  {Function File} {[@var{num}, @var{str}] =} month (@var{date})
+## @deftypefnx {Function File} {[@dots{}] =} month (@var{date}, @var{f})
+## Return month of a date.
 ##
-## Returns the day of the month from a serial date number or a date
-## string.
+## For a given @var{date} in a serial date number or date string format,
+## returns its month number (@var{num}) or 3 letter name (@var{str}).
+##
+## The optional variable @var{f}, specifies the format string used to
+## interpret date strings.
 ##
 ## @seealso{date, datevec, now, day, year}
 ## @end deftypefn
 
-function t = month (dates)
+function [num, str] = month (varargin)
 
-  t = datevec (dates);
-  t = t (:,2);
+  if (nargin < 1 || nargin > 2)
+    print_usage ();
+  elseif (nargin >= 2 && ! ischar (varargin{2}))
+    error ("month: F must be a string");
+  endif
+
+  num = datevec (varargin{:})(:,2);
+  str = datestr ([0 num 0 0 0 0], "mmm");
 
 endfunction
+
+%!assert (nthargout (1:2, @month, 523383), {12 "Dec"});
+%!assert (nthargout (1:2, @month, "12-02-34", "mm-dd-yy"), {12 "Dec"});
 
